--- a/Code_demo_for_ProofOfConcept/ecommerce_food/food_app/templates/base.html
+++ b/Code_demo_for_ProofOfConcept/ecommerce_food/food_app/templates/base.html
@@ -20,12 +20,12 @@
 
     <main>
         {% block content %}
-        <!-- This is where the content from child templates will go -->
+        <!-- content from child templates  -->
         {% endblock %}
     </main>
 
     <footer>
-        <!-- Your footer content goes here -->
+        <!-- footer content -->
     </footer>
 </body>
 </html>
