--- a/FoodOnline/food/templates/food/index.html
+++ b/FoodOnline/food/templates/food/index.html
@@ -1,6 +1,6 @@
 {% extends 'food/base.html' %}
 
-{% block title %} Food Online {% endblock %}
+{% block title %} Food {% endblock %}
 
 {% block content %}
 
