--- a/FoodOnline/food/templates/food/base.html
+++ b/FoodOnline/food/templates/food/base.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="img/png" href="https://img.icons8.com/hatch/32/carrot.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!-- for better SEO -->
+    <meta name="description" content="Order delicious food from our site">
+    <meta name="keywords" content="Food, Order, Online, Delivery">
+    <!-- end opti SEO -->
+
+    <link rel="icon" type="img/png" href="../static/food/img/ext/icons8-kawaii-french-fries-50.png">
+    
     <title>{% block title %} {% endblock %}</title>
     <!-- first para -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -14,14 +20,18 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #808080;">
-        <!-- Brand/logo -->
-        <a class="navbar-brand" href="{% url 'index' %}">
-          <img src="https://img.icons8.com/hatch/32/carrot.png" class="logo"/>
-        </a>
-        
+  <nav class="navbar navbar-expand-sm navbar-light sticky-top" style="background-color: #808080;">
+    <div class="container">
+      <!-- Brand/logo -->
+      <a class="navbar-brand" href="{% url 'index' %}">
+        <img src="../static/food/img/ext/icons8-kawaii-french-fries-50.png" alt="Brand Logo" class="logo" style="width: 35px; height: 35px;">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav" aria-controls="">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mynav">
         <!-- Links -->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'index' %}">Home</a>
           </li>
@@ -31,22 +41,66 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'food:burgers' %}">Burgers</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'food:rices' %}">Rice</a>
+          </li>
         </ul>
-      </nav>    
-      <div>
-        {% block content %} {% endblock %}
+        
+        <ul class="navbar-nav ml-md-auto">
+          {% if user.is_authenticated %}
+          <li class="nav-item mt-2">
+            <h5 class="text-light pt-2 pr-4">Welcome, {{ user.username }}</h5>
+          </li>
+          {% elif messages %}
+            {% for message in messages %}
+            <li class="nav-item mt-2">
+              <h5 class="text-light pt-2 pr-4">{{ message }}</h5>
+            </li>
+            {% endfor %}
+          {% endif %}
+          <li class="nav-item">
+            <a href="{% url 'food:order' %}" class="nav-link">
+              <img src="../static/food/img/ext/icons8-add-shopping-cart-50.png" class="logo" style="width: 35px; height: 35px;">
+              <span id="cart"></span>
+            </a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a href="{% url 'food:logout' %}" class="nav-link">
+              <img src="../static/food/img/ext/icons8-user-64.png" class="logo" style="width: 35px; height: 35px;">
+              Log Out
+            </a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a href="{% url 'food:login' %}" class="nav-link">
+              <img src="../static/food/img/ext/icons8-user-64.png" class="logo" style="width: 35px; height: 35px;">
+              Log In
+            </a>
+          </li>
+          {% endif %}
+        </ul>
       </div>
+    </div>
+  </nav>    
+  
+  <div class="container mt-4">
+    {% block content %}
+    {% endblock %}
+  </div>
 
-    <!-- jQuery library -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+  <!-- jQuery library -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
 
-    <!-- Popper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <!-- Popper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="{% static 'food/js/main.js' %}"></script>
+  <script src="{% static 'food/js/main.js' %}"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </body>
 </html>
