--- a/FoodOnline/food/templates/food/burger.html
+++ b/FoodOnline/food/templates/food/burger.html
@@ -1,56 +1,55 @@
 {% extends 'food/base.html' %}
 
+{% load static %}
+
 {% block title %} Burgers {% endblock %}
 
-{% block content%}
+{% block content %}
 
-    
-
-    <div class="container-fluid">
-        <div class="row text-center">
-            <div class="col-md-8">
-                <h2 class="title"> Our Burgers</h2>
-                <div class="row">
-                    {% for burger in burgers %}
-                    <div class="col-md-6 p-4">
-                        <img class="picture" src="{{ burger.bImage }}">
-                        <h4 class="pt-3">{{ burger.name }}</h4>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 text-center">
+            <h2 class="title"> Our Burgers</h2>
+            <div class="row">
+                {% for burger in burgers %}
+                <div class="col-md-6 p-4">
+                    <div class="card card-rectangle">
+                      <img class="card-img-top picture" src="{{ burger.bImage }}" alt="{{ burger.name }}" style="max-width: 100%; height: 300px; object-fit: cover;">
+                      <div class="card-body">
+                        <h4 class="card-title" id="bur{{burger.id}}">{{ burger.name }}</h4>
                         <div class="form-check-inline">
                             <label class="form-check-inline">
-                                <input class="form-check-input" type="radio" name="burger_size_{{ burger.id }}" checked>
-                                {{ burger.priceM }} $
+                                <input class="form-check-input" type="radio" name="burger{{ burger.id }}" value="{{ burger.priceM }}" checked>
+                                M {{ burger.priceM }} VND
                             </label>
                         </div>
 
                         <div class="form-check-inline">
                             <label class="form-check-inline">
-                                <input class="form-check-input" type="radio" name="burger_size_{{ burger.id }}" >
-                                {{ burger.priceL }} $
+                                <input class="form-check-input" type="radio" name="burger{{ burger.id }}" value="{{ burger.priceL }}" >
+                                L {{ burger.priceL }} VND
                             </label>
                         </div>
-                        
+
                         <div>
-                            <button class="btn-info mt-3">Add to cart</button>
+                            <button class="btn btn-info mt-3" onclick="addBurger('{{ burger.id }}')">Add to cart</button>
                         </div>
-                        
+                      </div>
                     </div>
-                    {% endfor %}
                 </div>
-                
+                {% endfor %}
             </div>
-            <div class="col-md-4">
-
-
+        </div>
+        <div class="col-md-4 orders">
+            <div class="shell p-4 ">
+                <h2 class="text-center">Order list </h2>
+                <ul id="bcart"> </ul>
+                <h4 class="text-right" id="btotal">Total: 0 $</h4>
             </div>
-
         </div>
     </div>
+</div>
 
-
-    
-
-
-
-
+<script src="{% static 'food/js/border.js' %}"></script>
 
 {% endblock %}
