--- a/FoodOnline/food/templates/food/pizza.html
+++ b/FoodOnline/food/templates/food/pizza.html
@@ -1,56 +1,51 @@
 {% extends 'food/base.html' %}
 
-{% block title %} Pizzas {% endblock %}
+{% load static %}
+
+{% block title %}Pizzas{% endblock %}
 
 {% block content%}
-
-    
-
-    <div class="container-fluid">
-        <div class="row text-center">
-            <div class="col-md-8">
-                <h2 class="title"> Our Pizzas</h2>
-                <div class="row">
-                    {% for pizza in pizzas %}
-                    <div class="col-md-6 p-4">
-                        <img class="picture" src="{{ pizza.pImage }}">
-                        <h4 class="pt-3">{{ pizza.name }}</h4>
-                        <div class="form-check-inline">
-                            <label class="form-check-inline">
-                                <input class="form-check-input" type="radio" name="pizza_size_{{ pizza.id }}" checked>
-                                {{ pizza.priceM }} $
-                            </label>
-                        </div>
-
-                        <div class="form-check-inline">
-                            <label class="form-check-inline">
-                                <input class="form-check-input" type="radio" name="pizza_size_{{ pizza.id }}" >
-                                {{ pizza.priceL }} $
-                            </label>
-                        </div>
-                        
-                        <div>
-                            <button class="btn-info mt-3">Add to cart</button>
-                        </div>
-                        
-                    </div>
-                    {% endfor %}
-                </div>
-                
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8 text-center">
+      <h2 class="title">Our Pizzas</h2>
+      <div class="row">
+        {% for pizza in pizzas %}
+        <div class="col-md-6 p-4">
+          <div class="card card-rectangle">
+            <img class="card-img-top picture" src="{{ pizza.pImage }}" alt="{{ pizza.name }}" style="max-width: 100%; height: 300px; object-fit: cover;">
+            <div class="card-body">
+              <h4 class="card-title" id="piz{{pizza.id}}">{{ pizza.name }}</h4>
+              <div class="form-check-inline">
+                <label class="form-check-inline">
+                  <input class="form-check-input" type="radio" name="pizza{{ pizza.id }}" value="{{ pizza.priceM }}" checked>
+                  M {{ pizza.priceM }} VND
+                </label>
+              </div>
+              <div class="form-check-inline">
+                <label class="form-check-inline">
+                  <input class="form-check-input" type="radio" name="pizza{{ pizza.id }}" value="{{ pizza.priceL }}">
+                  L {{ pizza.priceL }} VND
+                </label>
+              </div>
+              <div>
+                <button class="btn btn-info mt-3" onclick="addPizza('{{ pizza.id }}')">Add to cart</button>
+              </div>
             </div>
-            <div class="col-md-4">
-
-
-            </div>
-
+          </div>
         </div>
+        {% endfor %}
+      </div>
     </div>
+    <div class="col-md-4 orders">
+      <div class="shell p-4">
+        <h2 class="text-center">Order list</h2>
+        <ul id="pcart"></ul>
+        <h4 class="text-right" id="ptotal">Total: 0 VND</h4>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-    
-
-
-
-
-
+<script src="{% static 'food/js/order.js' %}"></script>
 {% endblock %}
